--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "12.0.7",
     "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.1.1",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.24.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
