--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
     "next": "12.0.7",
+    "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.24.0"
+    "react-hook-form": "^7.24.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
