--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.1.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -17,6 +18,7 @@
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
     "next": "12.0.7",
+    "next-absolute-url": "^1.2.2",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
     "react": "17.0.2",
@@ -24,7 +26,9 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
     "react-redux": "^7.2.6",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
