--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.1.6",
     "next": "12.0.7",
     "next-absolute-url": "^1.2.2",
+    "next-auth": "^4.0.0-next.26",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
     "react": "17.0.2",
