--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
-    "next": "12.0.7",
+    "next": "^12.0.7",
     "next-absolute-url": "^1.2.2",
     "next-auth": "^4.0.0-next.26",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.0",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
@@ -41,5 +41,21 @@
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.13"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "version": "1.0.0",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dev6jpweb/ecommerce.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dev6jpweb/ecommerce/issues"
+  },
+  "homepage": "https://github.com/dev6jpweb/ecommerce#readme"
 }
